[tool.poetry]
name = "asynch"
version = "0.3.0"
description = "An asyncio driver for ClickHouse with native TCP support"
authors = ["long2ice <long2ice@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/long2ice/asynch"
repository = "https://github.com/long2ice/asynch.git"
documentation = "https://github.com/long2ice/asynch"
keywords = ["asyncio", "clickhouse", "python", "driver"]
packages = [
    { include = "asynch" },
    { include = "asynch/py.typed" }
]
include = ["LICENSE", "README.md", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
leb128 = "1.0.8"
pytz = "2025.1"
lz4 = "4.4.3"
clickhouse-cityhash = { version = "1.0.2.4", optional = true }
zstd = "1.5.6.6"
tzlocal = "5.3.1"
ciso8601 = "2.3.2"

[tool.poetry.extras]
compression = ["clickhouse-cityhash"]

[tool.poetry.dev-dependencies]
bandit = "1.8.3"
clickhouse-driver = "0.2.9"
uvloop = "0.21.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.10"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"
pytest-random-order = "^1.1.1"
pytest-xdist = "^3.6.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--maxfail=1 -s -vvv --random-order"
asyncio_mode = "auto"
minversion = "7.4"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long  # for now
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = [
    "I"  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
